# api/middleware/request/information/password_edit.go
@@ -10,11 +10,11 @@ import (
 )
 
 func validatePasswordEdit(data information.EditPassword) error {
-	if data.OriginalPwd == "" || data.NewPwd == "" {
+	if data.CurrentPassword == "" || data.EditPassword == "" {
 		return errors.New("password can't be empty")
-	} else if len(data.OriginalPwd) < 8 || len(data.NewPwd) < 8 {
+	} else if len(data.CurrentPassword) < 8 || len(data.EditPassword) < 8 {
 		return errors.New("length of password can't shorten than 8 chars")
-	} else if strings.ContainsAny(data.OriginalPwd, " ") || strings.ContainsAny(data.NewPwd, " ") {
+	} else if strings.ContainsAny(data.CurrentPassword, " ") || strings.ContainsAny(data.EditPassword, " ") {
 		return errors.New("password can't contain space")
 	}
 	return nil
