# api/routes/routes_mail.go
@@ -10,6 +10,6 @@ import (
 )
 
 func InitMailRoutes(r *gin.RouterGroup, sqlRepository *sql.Repository, redisRepository *redis.Repository) {
-	r.POST("", requestMail.MiddlewareMailVerificationContent(), (&handlerMail.HandlerMailVerification{Service: mail.ServiceMailVerification{RedisRepository: *redisRepository}}).Handle)
-	r.GET("/:mail/:code", requestMail.MiddleWareMailVerifyContent(), (&handlerMail.HandlerMailVerify{Service: mail.ServiceMailVerify{RedisRepository: *redisRepository}}).Handle)
+	r.POST("/verification", requestMail.MiddlewareMailVerificationContent(), (&handlerMail.HandlerMailVerification{Service: mail.ServiceMailVerification{RedisRepository: *redisRepository}}).Handle)
+	r.GET("/verification/:mail/:code", requestMail.MiddleWareMailVerifyContent(), (&handlerMail.HandlerMailVerify{Service: mail.ServiceMailVerify{RedisRepository: *redisRepository}}).Handle)
 }
